# iris_plugin_explicit_mpc

./: CMakeLists.txt  CMakeLists_old.txt  README.md  iris_explicit_mpc.world  iris_plugin_explicit_mpc.cc  package.xml
control_files/: output_bst.txt  output_control_param.txt  output_ineq.txt  output_ineq_20_2_u3_vt1.txt  output_regions.txt
control_files/vt1_10_2_u3_linux/: bst_nodes_10_2_u3_vt1.mat  control_params_10_2_u3_vt1.mat  ineq_10_2_u3_inter_vt1.mat  output_bst_10_2_u3_vt1.txt  output_control_param_10_2_u3_vt1.txt  output_ineq_10_2_u3_vt1.txt  output_regions_10_2_u3_vt1.txt  regions_10_2_u3_vt1.mat
control_files/vt1_10_3_u3_linux/: control_params_10_3_u3_vt1.mat  ineq_10_3_u3_inter_vt1.mat  output_control_param_10_3_u3_vt1.txt  output_ineq_10_3_u3_vt1.txt
control_files/vt1_15_2_u3_linux/: bst_nodes_15_2_u3_vt1.mat  control_params_15_2_u3_vt1.mat  ineq_15_2_u3_inter_vt1.mat  output_bst_15_2_u3_vt1.txt  output_control_param_15_2_u3_vt1.txt  output_ineq_15_2_u3_vt1.txt  output_regions_15_2_u3_vt1.txt  regions_15_2_u3_vt1.mat
control_files/vt1_15_3_u3_linux/: control_params_15_3_u3_vt1.mat  ineq_15_3_u3_inter_vt1.mat  output_control_param_15_3_u3_vt1.txt  output_ineq_15_3_u3_vt1.txt
control_files/vt1_20_2_u3_linux/: bst_nodes_20_2_u3_vt1.mat  control_params_20_2_u3_vt1.mat  ineq_20_2_u3_inter_vt1.mat  output_bst_20_2_u3_vt1.txt  output_control_param_20_2_u3_vt1.txt  (+2 more)
launch/: iris_explicit.launch
robots/: iris_with_explicit_mpc.sdf
src/: explicit_mpc_bst.cpp  iris_plugin_explicit_mpc.cc  iris_plugin_explicit_mpc_old_pc.cc
worlds/: iris.world
(+5 files in other folders)
